# wasmedge-wasinn-mediapipe-facedet-demo

./: .gitignore  Cargo.toml  README.md  drawDetections.py
src/: draw_box.rs  main.rs
src/infer_image/: mod.rs
src/mediapipe_solutions/: face_detection.rs  mod.rs
src/process_image/: mod.rs
src/process_output/: conv_anchors.rs  gen_anchors.rs  mod.rs  non_maximum_suppression.rs
src/show_output/: draw_output.rs  mod.rs  print_output.rs
